# IE-Team7-Project

./: CMakeLists.txt  README.md  makefile
.cache/clangd/index/: main.cc.42A54D568AF2F489.idx
Shell_Impl/: CMakeLists.txt
gemini/: .gitignore
gemini/gui_shell/: mainwindow.cpp  shell.cc
gui_shell/: CMakeLists.txt  app.py  mainwindow.cpp  mainwindow.h  mainwindow.ui  shell.cc  shell.h  shell_ulti.pro
model_testing/.cache/clangd/index/: shell.cc.9D829C750FD3E9B3.idx  shell.h.58ABDEE9A41A21DA.idx
shell/: main.cpp  shell.cpp  shell.h
src/: main.cc  shell.cc  shell.h
